<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">System Updater</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show Password</string>

    <string name="welcome">System Updater</string>
    <string name="unknown_state">Unknown State</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="quit">Quit</string>
    <string name="retry">Retry</string>
    <string name="querying_update">Checking for updates ..</string>
    <string name="no_updates">No Updates available</string>
    <string name="downloading_update">Downloading Update .. </string>
    <string name="update_ready">Update ready to install</string>
    <string name="critical_update_ready">Critical update ready to install.\nAuto install in 1 min</string>
    <string name="update_ready_details">\nUpdate will take approx 10 mins. You will not be able to use the device during this time, including emergency calls.\n</string>
    <string name="install_update">Install Update</string>
    <string name="postpone_update">Remind me later</string>
    <string name="installing_update">Installing Update</string>
    <string name="update_done">Update complete</string>
    <string name="critical_update_done">Critical update complete</string>
    <string name="update_available">Update Available</string>
    <string name="critical_update_available">Critical update available.\nAuto download in 1 min</string>
    <string name="download_and_install_update">Download and Install</string>
    <string name="critical_update_success">Critical update successful</string>
    <string name="critical_update_failed">Critical update failed</string>
    <string name="update_success">Update successful</string>
    <string name="update_failed">Update failed</string>
    <string name="validating_update">Validating Update..</string>
    <string name="about_to_install">About to install..</string>
    <string name="download_paused">Download Paused</string>
    <string name="error">Error !</string>
    <string name="error_text">Device recovered the original configuration</string>
    <string name="no_error">No Error</string>
    <string name="no_network">No network available</string>
    <string name="no_wifi">No WiFi available</string>
    <string name="incorrect_version">Update package has incorrect version</string>
    <string name="update_corrupt">Update file is corrupt</string>
    <string name="update_file_missing">Update file is missing</string>
    <string name="download_failed">Download failed</string>
    <string name="verify_failed">Update package is corrupt</string>
    <string name="signature_mismatch">Update package has incorrect signature</string>
    <string name="battery_low">Low battery</string>
    <string name="update_lock_held">Update lock is being held</string>
    <string name="install_failed">Install failed</string>
    <string name="unknown_error">Unknown error</string>
    <string name="wifi_only">Wi-Fi only download</string>
    <string name="version">\nVersion</string>
    <string name="size">\nSize</string>
    <string name="release_notes">\nRelease Notes</string>
    <string name="last_checked">Last checked on : </string>
    <string name="never">Never</string>
    <string name="waiting">Waiting ..</string>
    <string name="waiting_network">Waiting for network..</string>
    <string name="waiting_for_wifi">Waiting for WiFi..</string>
    <string name="cancel_update">Cancel Update</string>
    <string name="waiting_for_network">Waiting for network.</string>
    <string name="auto_resume">The download will resume automatically in <xliff:g id="min" example="30">%1$d</xliff:g> min</string>
    <string name="current_battery_level">Current battery level is</string>
    <string name="battery_minimum">Update will auto install when battery level reaches 20 %</string>
    <string name="warning_msg_before_update">NOTE: \nPlease do NOT use buttons during update.</string>
</resources>
