<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/no_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_network"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/update_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_available"/>

            <TextView
                android:id="@+id/wifi_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_only"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"/>

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"/>

            <TextView
                android:id="@+id/release_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/release_notes"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/download_and_install_update"
        style="@style/fullborder"
        android:layout_width="match_parent"
        android:text="@string/download_and_install_update"/>

    <Button
        android:id="@+id/cancel_download_update"
        style="@style/fullborder"
        android:layout_width="match_parent"
        android:text="@string/cancel_update"/>

</LinearLayout>