<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:id="@+id/no_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/no_updates"/>

    <TextView
        android:id="@+id/no_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/no_updates"
        android:layout_centerHorizontal="true"
        android:text="@string/no_network"
        android:visibility="gone"/>

    <Button
        android:id="@+id/check_for_updates"
        style="@style/fullborder"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/check_for_updates"/>

</RelativeLayout>